added campaign assign to user API
